[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MenuButtons.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Difficulty.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=3]
[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/architect_65.tres" type="DynamicFont" id=5]
[ext_resource path="res://images/background-01-01.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[node name="Start" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1040.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="Title" type="Label" parent="UI"]
margin_top = 250.0
margin_right = 576.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Virus Sweeper"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="Node2D" parent="UI"]
script = ExtResource( 1 )

[node name="Start" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 3 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons/Start"]
margin_top = 450.0
margin_right = 576.0
margin_bottom = 650.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_right = 576.0
margin_bottom = 110.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 114.0
margin_right = 576.0
margin_bottom = 224.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTween" type="Tween" parent="UI/MenuButtons/Start"]

[node name="Difficulty" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 576, 0 )
script = ExtResource( 2 )

[node name="DifficultyMenu" type="VBoxContainer" parent="UI/MenuButtons/Difficulty"]
margin_top = 450.0
margin_right = 576.0
margin_bottom = 752.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Classic" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_right = 576.0
margin_bottom = 110.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Classic"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flu" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 114.0
margin_right = 576.0
margin_bottom = 224.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Flu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Covid-19" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 228.0
margin_right = 576.0
margin_bottom = 338.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Covid-19"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 342.0
margin_right = 576.0
margin_bottom = 452.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTween" type="Tween" parent="UI/MenuButtons/Difficulty"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Start" to="UI/MenuButtons" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Classic" to="UI/MenuButtons" method="_on_Classic_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Flu" to="UI/MenuButtons" method="_on_Flu_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Covid-19" to="UI/MenuButtons" method="_on_Covid19_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Back" to="UI/MenuButtons" method="_on_Back_pressed"]
